--- a/10-21/example_code/templates/login.html
+++ b/10-21/example_code/templates/login.html
@@ -5,6 +5,7 @@
     <title>Hello Page</title>
 </head>
 <body>
+    <!--action為指定form sumbit後用來處理的函式-->
     <form method='post' action={{ url_for('login') }}> 
         <p>
             <input type='text' name='username' />
