--- a/10-21/HW6/static/style.css
+++ b/10-21/HW6/static/style.css
@@ -57,7 +57,7 @@ html, body{
 .form-input {
     height: 60px;
     width: 300px;
-    font-size: inherit;
+    font-size: 30px;
 }
 
 .form-submit {
@@ -78,5 +78,93 @@ html, body{
 .form-select {
     width: 200px;
     height: 70px;
-    font-size: 60px;
+    font-size: 40px;
+}
+.from-response {
+    font-size: 12px;
+    height:17px;
+}
+
+.class-name-block {
+    display: flex;
+    justify-content: center;
+
+}
+
+.class-name-block-text {
+    font-size: 20px;
+
+}
+.score-list {
+    margin-top: 20px;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    list-style-type: none;
+    padding: 0px 10px
+
+}
+.a-score-block {
+    width: 150px;
+    height: 150px;
+    border: 2px blue outset;
+    margin: 10px;
+    border-radius: 5px;
+    list-style: none;
+    
+
+}
+.in-score-block {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+.in-score-block-text {
+    font-size: 20px;
+    margin: 5px 0px;
+}
+.bigger {
+    font-size: 25px;
+}
+.page-list-box {
+    width: 100%;
+    height: 40px;
+}
+.page-list {
+    width: 100%;
+    list-style: none;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: auto;
+    padding: 0px;
+}
+
+.page-box {
+    width: 40px;
+    height: 40px;
+    list-style: none;
+    border: 1px skyblue solid;
+    border-top: 2px skyblue solid;
+    border-bottom: 2px skyblue solid;
+    cursor: pointer;
+    
+}
+.page-number {
+    font-size: 32px;
+    width: 100%;
+    display: block;
+    color:skyblue;
+    cursor: pointer;
+    text-align: center;
+}
+.last-page {
+    width: 80px;
+}
+.rotate-page {
+    width: 120px;
 }
